chore: fix chips demo spacing

--- a/kitchen-sink/react/src/css/app.css
+++ b/kitchen-sink/react/src/css/app.css
@@ -660,3 +660,8 @@ code {
 .example-preview .example-hidden {
   display: none !important;
 }
+
+/* Demo Chips */
+.block .chip {
+  margin: 2px 4px 2px 0;
+}
