--- a/kitchen-sink/svelte/src/css/app.css
+++ b/kitchen-sink/svelte/src/css/app.css
@@ -658,3 +658,8 @@ code {
 .example-preview .example-hidden {
   display: none !important;
 }
+
+/* Demo Chips */
+.block .chip {
+  margin: 2px 4px 2px 0;
+}
